Update tomcat.install.el6.sh