@@ -45,7 +45,7 @@ declare -r JAVA_HOME=${JAVA_HOME:-$(echo $(readlink -e $(which java 2>/dev/null)
 declare withAPR=
 
 [ -z $JAVA_HOME ] && echo "  Lost Java, install JDK first." && exit 1
-[ -e /usr/lib/systemd/system/tomcat8.service ] && echo "  tomcat$ver already exist." && exit 0
+`service tomcat$ver version >/dev/null 2>&1` && echo "  tomcat$ver already exist." && exit 0
 [ -d $tomcat_home ] && mv $tomcat_home $tomcat_home.saved.$datetime
 
 if ! grep -e "^${owner}" /etc/group >/dev/null; then
@@ -62,14 +62,6 @@ fi
 
 url=$url_tomcat_src
 source=$tomcat_src
-
-echo "  Install jpackage-utils ..."
-if [ $(rpm -qa jpackage-utils | wc -l) -lt 1 ]; then
-  if ! yum install -y -q jpackage-utils >/dev/null; then
-    echo -e "  install package \"jpackage-utils\" first."
-    exit 1
-  fi
-fi
 
 echo "  Downloading Tomcat ..."
 curl -fjkL $url -o $workDir/$source
@@ -283,101 +275,11 @@ CATALINA_OPTS="-Djava.security.egd=file:/dev/./urandom"
 
 _EOT_
 [ $((echo "`java -version 2>&1`") | grep "java version" | cut -d "\"" -f 2 | cut -d "." -f 2) -gt 7 ] && \
-sed -i -e 's/PermSize/MetaSpaceSize/g' $tomcat_home/conf/tomcat$ver.conf
+sed -i -e 's/PermSize/MetaspaceSize/g' $tomcat_home/conf/tomcat$ver.conf
 chown $owner:$owner $tomcat_home/conf/tomcat$ver.conf
 chmod 0664 $tomcat_home/conf/tomcat$ver.conf
 
-cat <<_EOT_> /usr/sbin/tomcat$ver
-#!/bin/bash
-
-if [ -r /usr/share/java-utils/java-functions ]; then
-  . /usr/share/java-utils/java-functions
-else
-  echo "Can't read Java functions library, aborting"
-  exit 1
-fi
-
-# Get the tomcat config (use this for environment specific settings)
-if [ -z "\${TOMCAT_CFG}" ]; then
-  TOMCAT_CFG="/etc/tomcat${ver}/tomcat${ver}.conf"
-fi
-
-if [ -r "\$TOMCAT_CFG" ]; then
-  . \$TOMCAT_CFG
-  CATALINA_BASE=\${CATALINA_BASE:-\${CATALINA_HOME}}
-fi
-
-# Only source the sysconfig file if TOMCAT_NAME or NAME is defined
-# This prevents issues when defining NAME in the config file while
-# still allowing the NAME environment variable to be set when executing
-# this script
-# By default the init script exports TOMCAT_NAME
-if [ -n "\${TOMCAT_NAME}" -a -r "/etc/sysconfig/\${TOMCAT_NAME}" ]; then
-    . /etc/sysconfig/\${TOMCAT_NAME}
-elif [ -n "\${NAME}" -a -r "/etc/sysconfig/\${NAME}" ]; then
-    . /etc/sysconfig/\${NAME}
-fi
-
-set_javacmd
-# CLASSPATH munging
-if [ -n "\$JSSE_HOME" ]; then
-  CLASSPATH="\${CLASSPATH}:\$(build-classpath jcert jnet jsse 2>/dev/null)"
-fi
-CLASSPATH="\${CLASSPATH}:\${CATALINA_HOME}/bin/bootstrap.jar"
-CLASSPATH="\${CLASSPATH}:\${CATALINA_HOME}/bin/tomcat-juli.jar"
-CLASSPATH="\${CLASSPATH}:\$(build-classpath commons-daemon 2>/dev/null)"
-
-if [ "\$1" = "start" ]; then
-  \${JAVACMD} \$JAVA_OPTS \$CATALINA_OPTS \
-    -classpath "\$CLASSPATH" \
-    -Dcatalina.base="\$CATALINA_BASE" \
-    -Dcatalina.home="\$CATALINA_HOME" \
-    -Djava.endorsed.dirs="\$JAVA_ENDORSED_DIRS" \
-    -Djava.io.tmpdir="\$CATALINA_TMPDIR" \
-    -Djava.util.logging.config.file="\${CATALINA_BASE}/conf/logging.properties" \
-    -Djava.util.logging.manager="org.apache.juli.ClassLoaderLogManager" \
-    org.apache.catalina.startup.Bootstrap start \
-    >> \${CATALINA_BASE}/logs/catalina.out 2>&1 &
-    if [ ! -z "\$CATALINA_PID" ]; then
-      echo \$! > \$CATALINA_PID
-    fi
-elif [ "\$1" = "start-security" ]; then
-  \${JAVACMD} \$JAVA_OPTS \$CATALINA_OPTS \
-    -classpath "\$CLASSPATH" \
-    -Dcatalina.base="\$CATALINA_BASE" \
-    -Dcatalina.home="\$CATALINA_HOME" \
-    -Djava.endorsed.dirs="\$JAVA_ENDORSED_DIRS" \
-    -Djava.io.tmpdir="\$CATALINA_TMPDIR" \
-    -Djava.security.manager \
-    -Djava.security.policy=="\${CATALINA_BASE}/conf/catalina.policy" \
-    -Djava.util.logging.config.file="\${CATALINA_BASE}/conf/logging.properties" \
-    -Djava.util.logging.manager="org.apache.juli.ClassLoaderLogManager" \
-    org.apache.catalina.startup.Bootstrap start \
-    >> \${CATALINA_BASE}/logs/catalina.out 2>&1 &
-    if [ ! -z "\$CATALINA_PID" ]; then
-      echo \$! > \$CATALINA_PID
-    fi
-elif [ "\$1" = "stop" ]; then
-  \${JAVACMD} \$JAVA_OPTS \
-    -classpath "\$CLASSPATH" \
-    -Dcatalina.base="\$CATALINA_BASE" \
-    -Dcatalina.home="\$CATALINA_HOME" \
-    -Djava.endorsed.dirs="\$JAVA_ENDORSED_DIRS" \
-    -Djava.io.tmpdir="\$CATALINA_TMPDIR" \
-    org.apache.catalina.startup.Bootstrap stop \
-    >> \${CATALINA_BASE}/logs/catalina.out 2>&1
-elif [ "\$1" = "version" ]; then
-  \${JAVACMD} -classpath \${CATALINA_HOME}/lib/catalina.jar \
-    org.apache.catalina.util.ServerInfo
-else
-  echo "Usage: \$0 {start|start-security|stop|version}"
-  exit 1
-fi
-
-_EOT_
-chmod 0755 /usr/sbin/tomcat$ver
-
-cat <<_EOT_> /etc/rc.d/init.d/tomcat$ver
+cat <<_EOF_> /etc/rc.d/init.d/tomcat$ver
 #!/bin/bash
 #
 # tomcat       start and stop tomcat
@@ -418,22 +320,18 @@ TOMCAT_CFG="/etc/tomcat${ver}/tomcat${ver}.conf"
 [ -r "\$TOMCAT_CFG" ] && . \$TOMCAT_CFG
 
 # Define Settings.
+## connector port is "connector.port" in conf/catalina.properties
 #CONNECTOR_PORT="\${CONNECTOR_PORT:-8080}"
-TOMCAT_SCRIPT="/usr/sbin/tomcat${ver}"
 TOMCAT_PROG="\${NAME}"
 TOMCAT_USER="\${TOMCAT_USER:-${owner}}"
+CATALINA_HOME="\${CATALINA_HOME:-\${CATALINA_BASE=-${tomcat_home}}}"
 TOMCAT_LOG="\${TOMCAT_LOG:-\${CATALINA_HOME}/logs/\${NAME}-initd.log}"
 SHUTDOWN_WAIT="\${SHUTDOWN_WAIT:-\${KILL_SLEEP_WAIT:-5}}"
+KILL_SLEEP_WAIT="\${KILL_SLEEP_WAIT:-\${SHUTDOWN_WAIT}}"
 CATALINA_PID="\${CATALINA_PID:-/var/run/\${NAME}.pid}"
-
+JAVA_OPTS="\$(grep -E "^JAVA_OPTS=" \$TOMCAT_CFG | sed -e 's/JAVA_OPTS=\"/ /' | sed -e 's/\"\$//')"
+CATALINA_OPTS="\$(echo "\$(grep -E "^CATALINA_OPTS=" \$TOMCAT_CFG | sed -e 's/CATALINA_OPTS=\"/ /' | sed -e 's/\"\$//')")"
 RETVAL="0"
-
-function parseOptions() {
-  options="export TOMCAT_NAME=\${NAME};export TOMCAT_CFG=\${TOMCAT_CFG};"
-  options="\$options \$(awk '!/^#/ && !/^\$/ { ORS=" "; print "export ", \$0, ";" }' \$TOMCAT_CFG)"
-  [ -r "/etc/sysconfig/\${NAME}" ] && options="\$options \$(awk '!/^#/ && !/^\$/ { ORS=" ";print "export ", \$0, ";" }' /etc/sysconfig/\${NAME})"
-  TOMCAT_SCRIPT="\$options \${TOMCAT_SCRIPT}"
-}
 
 # See how we were called.
 function start() {
@@ -445,24 +343,29 @@ function start() {
   if [ -f "/var/lock/subsys/\${NAME}" ]; then
     if [ -s "\${CATALINA_PID}" ]; then
       read kpid < \$CATALINA_PID
-      if [ -d "/proc/\${kpid}" ]; then
-        success
-        return 0
-      fi
+      [ -d "/proc/\${kpid}" ] && success && return 0
     fi
   fi
+
   # fix permissions on the log and pid files
   touch \$CATALINA_PID 2>&1 || RETVAL="4"
   [ "\$RETVAL" -eq "0" -a "\$?" -eq "0" ] && chown \${TOMCAT_USER}:\${TOMCAT_USER} \$CATALINA_PID
   [ "\$RETVAL" -eq "0" ] && touch \$TOMCAT_LOG 2>&1 || RETVAL="4" 
   [ "\$RETVAL" -eq "0" -a "\$?" -eq "0" ] && chown \${TOMCAT_USER}:\${TOMCAT_USER} \$TOMCAT_LOG
 
-  parseOptions
+  cat <<_EOT_> \$CATALINA_HOME/bin/setenv.sh
+CATALINA_PID="\${CATALINA_PID}"
+JAVA_OPTS="\${JAVA_OPTS}"
+CATALINA_OPTS="\$(echo "\${CATALINA_OPTS}")"
+
+_EOT_
+  chown \$TOMCAT_USER:\$TOMCAT_USER \$CATALINA_HOME/bin/setenv.sh
+  chmod 0644 \$CATALINA_HOME/bin/setenv.sh
 
   if [ "\$RETVAL" -eq "0" -a "\$SECURITY_MANAGER" = "true" ]; then
-    \$SU - \$TOMCAT_USER -c "\${TOMCAT_SCRIPT} start-security" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
+    \$SU - \$TOMCAT_USER -c "\${CATALINA_HOME}/bin/startup.sh -security" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
   else
-    [ "\$RETVAL" -eq "0" ] && \$SU - \$TOMCAT_USER -c "\${TOMCAT_SCRIPT} start" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
+    [ "\$RETVAL" -eq "0" ] && \$SU - \$TOMCAT_USER -c "\${CATALINA_HOME}/bin/startup.sh" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
   fi
   if [ "\$RETVAL" -eq "0" ]; then 
     touch /var/lock/subsys/\${NAME}
@@ -471,6 +374,7 @@ function start() {
     echo -n "Error code \${RETVAL}"
     failure
   fi
+  rm -f \$CATALINA_HOME/bin/setenv.sh
 }
 
 function stop() {
@@ -498,11 +402,18 @@ function stop() {
       exit 4
     fi
 
-    parseOptions
+    cat <<_EOT_> \$CATALINA_HOME/bin/setenv.sh
+CATALINA_PID="\${CATALINA_PID}"
+JAVA_OPTS="\${JAVA_OPTS}"
+
+_EOT_
+    chown \$TOMCAT_USER:\$TOMCAT_USER \$CATALINA_HOME/bin/setenv.sh
+    chmod 0644 \$CATALINA_HOME/bin/setenv.sh
 
     #stop tomcat
     echo -n "Stopping \${TOMCAT_PROG}: "
-    \$SU - \$TOMCAT_USER -c "\${TOMCAT_SCRIPT} stop" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
+
+    \$SU - \$TOMCAT_USER -c "\${CATALINA_HOME}/bin/shutdown.sh" >> \${TOMCAT_LOG} 2>&1 || RETVAL="4"
     if [ "\$RETVAL" -eq "4" ]; then
       sleep 1
       if [ "\$SHUTDOWN_VERBOSE" = "true" ]; then
@@ -516,11 +427,16 @@ function stop() {
     count=0
     until [ "\$(ps --pid \$kpid | grep -c \$kpid)" -eq "0" ] || [ "\$count" -gt "\$SHUTDOWN_WAIT" ]; do
       if [ "\$SHUTDOWN_VERBOSE" = "true" ]; then
-        echo "waiting for processes \${NAME} (\$kpid) to exit"
+        if [ "\$count" -gt 1 ];then
+          echo -n "waiting for processes \${NAME} (\$kpid) to exit"
+        else
+          echo -n "."
+        fi
       fi
       sleep 1
       let count="\${count}+1"
     done
+
     if [ "\$count" -gt "\$SHUTDOWN_WAIT" ]; then
       if [ "\${SHUTDOWN_VERBOSE}" = "true" ]; then
         echo -n "Failed to stop \${NAME} (\$kpid) gracefully after \$SHUTDOWN_WAIT seconds, sending SIGKILL."
@@ -557,11 +473,31 @@ function stop() {
     success
   fi
 
+  rm -f \$CATALINA_HOME/bin/setenv.sh
   return \$RETVAL
 }
 
+function configtest() {
+  cat <<_EOT_> \$CATALINA_HOME/bin/setenv.sh
+CATALINA_PID="\${CATALINA_PID}"
+JAVA_OPTS="\${JAVA_OPTS}"
+CATALINA_OPTS="\$(echo "\${CATALINA_OPTS}")"
+
+_EOT_
+  chown \$TOMCAT_USER:\$TOMCAT_USER \$CATALINA_HOME/bin/setenv.sh
+  chmod 0644 \$CATALINA_HOME/bin/setenv.sh
+
+  \$SU - \$TOMCAT_USER -c "\${CATALINA_HOME}/bin/catalina.sh configtest" 1>/dev/null
+
+  rm -f \$CATALINA_HOME/bin/setenv.sh
+}
+
+function version() {
+  \$SU - \$TOMCAT_USER -c "\${CATALINA_HOME}/bin/version.sh" 2>&1
+}
+
 function usage() {
-   echo "Usage: \$0 {start|stop|restart|condrestart|try-restart|reload|force-reload|status|version}"
+   echo "Usage: \$0 {start|stop|restart|status|version|configtest}"
    RETVAL="2"
 }
 
@@ -586,21 +522,6 @@ case "\$1" in
   restart)
     stop
     start
-    ;;
-  condrestart|try-restart)
-    if [ -s "\${CATALINA_PID}" ]; then
-      stop
-      start
-    fi
-    ;;
-  reload)
-    RETVAL="3"
-    ;;
-  force-reload)
-    if [ -s "\${CATALINA_PID}" ]; then
-      stop
-      start
-    fi
     ;;
   status)
     if [ -s "\${CATALINA_PID}" ]; then
@@ -629,7 +550,15 @@ case "\$1" in
     fi
     ;;
   version)
-    \${TOMCAT_SCRIPT} version
+    version
+    ;;
+  configtest)
+    if rh_status; then
+      echo -e "\"service \${NAME} stop\" first."
+      warning
+      exit 1
+    fi
+    configtest
     ;;
   *)
     usage
@@ -638,7 +567,7 @@ esac
 
 exit \$RETVAL
 
-_EOT_
+_EOF_
 chmod 0755 /etc/rc.d/init.d/tomcat$ver
 
 sed -i -e "s/Server port=\"8005\"/Server port=\"\${server.port.shutdown}\"/g" \
